<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/brand_color"
            android:gravity="center"
            android:padding="30dp">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/sample_product_description"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:tint="@color/light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseAppTint" />

            <ImageView
                android:id="@+id/iv_product_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/cd_iv_product_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_back"
                tools:srcCompat="@drawable/sample_image" />

            <TextView
                android:id="@+id/tv_preview_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/sample_product_name"
                android:textColor="@color/light"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_back"
                app:layout_constraintStart_toEndOf="@+id/btn_back"
                app:layout_constraintTop_toTopOf="@+id/btn_back" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="40dp"
            android:paddingTop="20dp"
            android:paddingBottom="60dp">

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sample_product_price"
                android:textColor="@color/brand_colors"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_product_category" />

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="2"
                android:text="@string/sample_product_name"
                android:textColor="@color/brand_color"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_add_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_add_favorite_background"
                android:drawableStart="@drawable/ic_baseline_favorite_border_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/favorite"
                android:paddingHorizontal="20dp"
                android:text="@string/action_save_to_favorite"
                android:textAllCaps="false"
                android:textColor="@color/favorite"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_price"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/btn_remove_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_favorite_background"
                android:drawableStart="@drawable/ic_baseline_favorite_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/light"
                android:paddingHorizontal="20dp"
                android:text="@string/action_saved_as_favorite"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_add_favorite"
                tools:ignore="UnusedAttribute" />


            <include
                android:id="@+id/label_product_category"
                layout="@layout/vc_product_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

            <TextView
                android:id="@+id/tv_product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:letterSpacing="0.03"
                android:lineHeight="25sp"
                android:text="@string/sample_product_description"
                android:textColor="@color/brand_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_remove_favorite"
                tools:targetApi="p" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</ScrollView>
